fixed alignment of notes meta and text

--- a/src/Notepad.css
+++ b/src/Notepad.css
@@ -12,13 +12,19 @@
     justify-content:flex-end;
     background-color: #F7ECDC;
     height:450px;
-    padding:30px;
+    padding:50px;
 }
 .note_element{
     display:flex;
-   
+    gap:20px;
+    padding:20px 0;
+    
 }
-
+.note_metadata{
+    width:160px;
+    flex-shrink: 0;/*helps to keep the metadata width fixed when screen shrinks*/
+    flex-basis: content;/*Adjusts the width automatically according to content. Used to keep date in single line*/
+}
 
 .input-wrapper{
     height:210px;
